# ace-step-dataset-toolkit

./: README.md  install.bat  pyproject.toml  run_toolkit.bat
scripts/: build_dataset.py  caption_audio.py  download_lyrics.py
